# waste-bin-backend

./: .env.burglary  README.md  README_API.md  alembic.ini  check_imports.py  check_libs.py  cleanup_task.py  database.py  diagnostic.py  image_classifier.py  init_db.py  list_models.py  main.py  models.py  pyproject.toml  requirements.txt  requirements_burglary.txt  requirements_cloudinary.txt  start.sh  test_api.py  test_gemini.py  train_model.py  verify_gemini.py
alembic/: env.py
burglary_alert/: __init__.py
burglary_alert/models/: __init__.py  alert.py  device_status.py  image.py  system_config.py  telegram_config.py
burglary_alert/routers/: __init__.py  alerts.py  auth.py  devices.py  images.py  telegram.py
burglary_alert/services/: __init__.py  correlation.py  telegram_bot.py
burglary_alert/utils/: __init__.py  auth.py  storage.py
energy_api/: audit.py  models.py  routes.py  schemas.py
health_monitoring/: __init__.py  correlation_engine.py  models.py  routes.py  schemas.py  services.py
